--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="team-member">
-          <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+          <img class="mx-auto rounded-circle" src="img/myimg/itsme.PNG" alt="">
           <h4>Jonathan Gorbachev</h4>
-          <p class="text-muted">doctor technician astronaut</p>
+          <p class="text-muted">Doctor Technician Astronaut</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="https://twitter.com/explore" target="_blank">
