--- a/index.html
+++ b/index.html
@@ -30,11 +30,41 @@
   <div class="offcanvas-btn" onClick="openCanvas()">
     <i class="fa fa-comment" aria-hidden="true"></i>
   </div>
-  <aside class="offcanvas-aside">
+  <aside class="offcanvas-aside bg-info">
 
     <!-- Contact -->
-    <section id="contact">
+    <section class="bg-info" id="contact">
       <h4>Contact Me</h4>
+          <div class="col-md-12">
+            <div class="contact-form">
+             
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="lname">Subject:</label>
+                <div class="col-sm-10">          
+                <input type="text" class="form-control-subject" id="lname" placeholder="Enter Last Name" name="lname">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="email">Email:</label>
+                <div class="col-sm-10">
+                <input type="email" class="form-control-email" id="email" placeholder="Enter email" name="email">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="comment">Comment:</label>
+                <div class="col-sm-10">
+                <textarea class="form-control-content" rows="5" id="comment"></textarea>
+                </div>
+              </div>
+              <div class="form-group">        
+                <div class="col-sm-offset-2 col-sm-10">
+                <button type="button" class="btn btn-default contect-me-btn" onclick="onSubmitContact()">Submit</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
   </aside>
@@ -60,7 +90,7 @@
             <a class="nav-link js-scroll-trigger" href="#me">Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" onclick="openCanvas()" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -84,7 +114,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Specialities</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">I Know What I Know.</h3>
         </div>
       </div>
       <div class="row text-center">
@@ -94,9 +124,7 @@
             <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-            quo inventore harum ex
-            magni, dicta impedit.</p>
+          <p class="text-muted">AliExpress Expert.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -104,9 +132,7 @@
             <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-            quo inventore harum ex
-            magni, dicta impedit.</p>
+          <p class="text-muted">This Site Is Responsive.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -114,9 +140,7 @@
             <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-            quo inventore harum ex
-            magni, dicta impedit.</p>
+          <p class="text-muted">Send Your Creditcard Number And 3 Digits At The Back.</p>
         </div>
       </div>
     </div>
@@ -128,7 +152,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">My Projects.</h3>
         </div>
       </div>
       <div class="row portfolio-container">
